--- a/src/components/Project/Projectitem.module.css
+++ b/src/components/Project/Projectitem.module.css
@@ -11,29 +11,37 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    align-items: flex-end;
-    flex-flow: column-reverse;
+    align-items: flex-start;
+    flex-flow: column;
     justify-content: flex-start;
     flex: 1;
   }
   
-  .projectItem h2 {
+  .projectItem h1 {
+    color: #3a3a3a;
+    font-size: 2rem;
+    flex: 1;
+    margin: 0 1rem;
+    color: white;
+  }
+  .projectItem p {
     color: #3a3a3a;
     font-size: 1rem;
     flex: 1;
-    margin: 0 1rem;
+    padding:1rem 1rem;
+    max-width: 80%;
     color: white;
   }
 
   @media (min-width: 580px) {
     .projectItem__description {
-      flex-direction: row;
-      align-items: center;
+      flex-direction: column;
+      align-items: flex-start;
       justify-content: flex-start;
       flex: 1;
     }
   
-    .projectItem__description h2 {
+    .projectItem__description h1 {
       font-size: 1.25rem;
     }
 }
