--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,10 @@ body {
   background-color: #282c34;
 
 }
-
+*{
+  margin: 0;
+  padding: 0;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
