--- a/src/components/UI/Button.module.css
+++ b/src/components/UI/Button.module.css
@@ -1,18 +1,18 @@
 .button {
     font: inherit;
-    border: 1px solid #4f005f;
-    background: #4f005f;
+    border: 1px solid #D71B60;
+    background: #D71B60;
     color: white;
     padding: 0.75rem 3.5rem;
     cursor: pointer;
     font-size: 1.15rem;
-    border-radius: 30px;
+    border-radius: 6px;
   }
   
   .button:hover,
   .button:active {
-    background: #741188;
-    border-color: #741188;
+    background: #D71B60;
+    border-color: #D71B60;
   }
   
   .button:focus {
